# gemini-cli-server

./: .gitignore  .gitmodules  CONTRIBUTING.md  EXAMPLES_READY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  RENAME_SUMMARY.md  RUN_EXAMPLES.md  pyproject.toml
ai_cli_server/: __init__.py  base_process.py  client.py  gemini_process.py  mock_server.py  process.py  qwen_process.py  server.py
examples/: README.md  __init__.py  error_handling.py  multi_backend_demo.py  multi_turn_chat.py  session_reset.py  simple_chat.py  tool_monitoring.py
gemini_cli_server/: __init__.py  client.py  process.py  server.py
tests/: conftest.py  test_client.py  test_process.py  test_server.py
