[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-server"
version = "0.2.0"
description = "HTTP Server/Client wrapper for AI CLIs (Gemini CLI, Qwen Code) with SSE streaming"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI CLI Server Contributors"}
]
keywords = ["ai", "cli", "server", "sse", "streaming", "api", "openai-compatible", "gemini", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/zhiyisun/gemini-cli-server"
Repository = "https://github.com/zhiyisun/gemini-cli-server"
Issues = "https://github.com/zhiyisun/gemini-cli-server/issues"
Documentation = "https://github.com/zhiyisun/gemini-cli-server#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cli_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_cli_server --cov-report=term-missing"

[tool.coverage.run]
source = ["ai_cli_server"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
